# ibkr-mcp-rs

./: Cargo.toml  Dockerfile  Dockerfile.http  PLAN-executions-pnl.md  PLAN-option-fields.md  README.md
config/: default.yaml  docker.yaml
scripts/: ibkr-mcp-cli  mcp_http_proxy.py
src/: config.rs  lib.rs  logging.rs  main.rs
src/ibkr/: account.rs  account_tests.rs  client.rs  contract.rs  error.rs  market_data.rs  mod.rs  orders.rs
src/mcp/: health.rs  mod.rs  server.rs  tools.rs
tests/: ib_connect_test.rs  live_ibkr_test.rs  mcp_server_test.rs  position_json_test.rs
